# PocketRouter

./: Android.mk  Makefile.am  README.md  configure.ac  lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c
lv_pocket_router/: launcher.mk
lv_pocket_router/res/fonts/: MPLUS1p_Bold_16.c  MPLUS1p_Bold_24.c  MPLUS1p_Medium_14.c  NotoSansArabic_ExtraCondensedBold_12.c  NotoSansArabic_ExtraCondensedBold_16.c  NotoSansArabic_ExtraCondensedBold_18.c  NotoSansArabic_ExtraCondensedBold_20.c  NotoSansArabic_ExtraCondensedBold_22.c  NotoSansArabic_ExtraCondensedBold_24.c  NotoSansArabic_ExtraCondensedBold_26.c  NotoSansArabic_ExtraCondensedBold_30.c  NotoSansArabic_ExtraCondensedBold_32.c  NotoSansArabic_ExtraCondensedBold_40.c  NotoSansArabic_ExtraCondensedBold_50.c  NotoSansArabic_ExtraCondensedMedium_14.c  NotoSansArabic_ExtraCondensedMedium_22.c  NotoSansArabic_ExtraCondensedMedium_24.c  NotoSansArabic_ExtraCondensedMedium_26.c  Oswald_Medium_14.c  Oswald_Medium_22.c  Oswald_SemiBold_12.c  Oswald_SemiBold_16.c  Oswald_SemiBold_18.c  Oswald_SemiBold_20.c  Oswald_SemiBold_22.c  Oswald_SemiBold_24.c  Oswald_SemiBold_26.c  Oswald_SemiBold_30.c  Oswald_SemiBold_32.c  Oswald_SemiBold_40.c  Oswald_SemiBold_50.c
lv_pocket_router/res/images/boot_anim/: bootup_3.c
lv_pocket_router/res/images/charge_mode/: icon_offscreen_charging_1.c  icon_offscreen_charging_2.c  icon_offscreen_charging_3.c  icon_offscreen_charging_4.c  icon_offscreen_charging_5.c  icon_offscreen_charging_6.c  icon_offscreen_charging_7.c
lv_pocket_router/res/images/dashboard_anim/: ic_dash_battery.c  ic_dash_battery_alert.c  ic_dash_battery_charging.c  ic_dash_battery_low.c  ic_dash_battery_remain_1.c  ic_dash_battery_remain_2.c  ic_dash_battery_remain_3.c  ic_dash_battery_remain_4.c  ic_dash_battery_remain_5.c  ic_dash_battery_remain_6.c  ic_dash_battery_remain_7.c  ic_dash_battery_remain_alert.c  ic_dash_battery_remain_charging.c  ic_dash_battery_remain_normal.c  ic_dash_data_count_1.c  ic_dash_data_count_10.c  ic_dash_data_count_11.c  ic_dash_data_count_12.c  ic_dash_data_count_2.c  ic_dash_data_count_3.c  ic_dash_data_count_4.c  ic_dash_data_count_5.c  ic_dash_data_count_6.c  ic_dash_data_count_7.c  ic_dash_data_count_8.c  ic_dash_data_count_9.c  ic_dash_data_level_1.c  ic_dash_data_level_10.c  ic_dash_data_level_11.c  ic_dash_data_level_12.c  ic_dash_data_level_2.c  ic_dash_data_level_3.c  ic_dash_data_level_4.c  ic_dash_data_level_5.c  ic_dash_data_level_6.c  ic_dash_data_level_7.c  ic_dash_data_level_8.c  ic_dash_data_level_9.c  ic_dash_user_number_1.c  ic_dash_user_number_2.c  (+17 more)
lv_pocket_router/res/images/dashboard_zyxel/: ic_dash_bettary_charging.c  ic_dash_bettary_level01.c  (+15 more)
lv_pocket_router/res/values/: string_table.h  string_value.c  string_value.h  styles.c  styles.h
lv_pocket_router/src/: dashboard.c  dashboard.h  launcher.c  launcher.h  manager.c  manager.h  status_bar.c  status_bar.h  status_bar_view.c  status_bar_view.h  uevent.c
lv_pocket_router/src/about/: about.c  about.h  about_help.c  about_help.h  caution_for_using_5g.c  caution_for_using_5g.h  device_information.c  device_information.h  open_source_notice.c  open_source_notice.h
lv_pocket_router/src/battery/: battery_charging.c  battery_charging.h  battery_info.c  battery_info.h
lv_pocket_router/src/conn_guide/: display_qr_code.c  display_qr_code.h  guide.c  guide.h  guide_wps.c  guide_wps.h  manual_conn.c  manual_conn.h  wps.c  wps.h
lv_pocket_router/src/display/: display.c  display.h  wake_lock.c  wake_lock.h
lv_pocket_router/src/ipc/: socket_client.c  socket_client.h  socket_format.h  socket_server.c  socket_server.h
lv_pocket_router/src/keyboard/: basic_kb.c  basic_kb.h  en_kb.c  en_kb.h  num_kb_box.c  num_kb_box.h  num_kb_col.c  num_kb_col.h
lv_pocket_router/src/power_saving/: battery_optimize.c  battery_optimize.h  power_saving.c  power_saving.h
lv_pocket_router/src/ril/: ril.c  ril.h  ril_nw.c  ril_nw.h  ril_qcmap.c  ril_qcmap.h  ril_sim.c  ril_sim.h  ril_util.h  ril_utils.c  ril_utils.h  sms_ril.c  sms_ril.h
lv_pocket_router/src/settings/: bluetooth_settings.c  bluetooth_settings.h  connected_users.c  connected_users.h  data_roaming.c  data_roaming.h  data_usage.c  data_usage.h  language.c  language.h  network_settings.c  network_settings.h  password_lock.c  password_lock.h  pin_management.c  pin_management.h  preference_network.c  preference_network.h  profile_management.c  profile_management.h  profile_management_data_store.c  profile_management_data_store.h  remote_wakeup.c  remote_wakeup.h  restore_default.c  restore_default.h  settings.c  settings.h  sim_network_controller.c  sim_network_controller.h  time_setting.c  time_setting.h  update.c  update.h  wifi.c  wifi.h  wifi_extender.c  wifi_extender.h
lv_pocket_router/src/sms/: sms.c  sms.h  sms_store.c  sms_store.h
lv_pocket_router/src/speedtest/: downloadtest.c  downloadtest.h  speedtest.c  speedtest.h
lv_pocket_router/src/ssid/: ssid.c  ssid.h
lv_pocket_router/src/util/: admin_settings.c  admin_settings.h  battery_log.c  battery_log.h  convert_string.c  convert_string.h  data_store.c  data_store.h  debug_log.h  default_settings.c  default_settings.h  ethernet_controller.c  ethernet_controller.h  high_speed.c  high_speed.h  info_page.c  info_page.h  led.c  led.h  list_action.c  list_action.h  liste_style.c  liste_style.h  page_anim.c  page_anim.h  popup_box.c  popup_box.h  power_manager.c  power_manager.h  power_menu.c  power_menu.h  usb_compositions.c  usb_compositions.h  util.c  util.h
lv_pocket_router/src/wlan/: country.h  hostapd_conf.c  hostapd_conf.h
lvgl/src/lv_core/: lv_indev.c  lv_obj.c  lv_obj.h
lvgl/src/lv_draw/: lv_draw_label.c  lv_draw_label.h
lvgl/src/lv_hal/: Arduino.h  lv_hal_disp.c
lvgl/src/lv_misc/: lv_anim.c  lv_anim.h  lv_color.h  lv_log.c  lv_mem.c  lv_mem.h  lv_misc.mk  lv_task.c  lv_task.h  lv_txt.c  lv_txt_ap.c  lv_txt_ap.h
lvgl/src/lv_objx/: lv_btnm.c  lv_btnm.h  lv_label.c  lv_label.h  lv_list.c  lv_list.h  lv_mbox.c  lv_mbox.h  lv_page.c  lv_page.h  lv_sw.c  lv_sw.h  lv_ta.c  lv_tabview.c  lv_tabview.h  lv_win.c  lv_win.h
(+270 files in other folders)
